--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 							<div class="col-lg-12">
 								<div class="text-container">
 									<h1 style="font-size: 50px;">数字化的时代</h1>
-									<h1 style="font-size: 50px;">企业管理流程、运营管理软件、企业运营数据</h1>
-									<h1 style="font-size: 50px;">需要掌握在制造企业自己手中</h1>
+									<h1 style="font-size: 50px;line-height: 1.5;">企业管理流程、管理软件、运营数据是企业的核心竞争力,需要掌握在制造企业自己手中</h1>
+									<!-- <h1 style="font-size: 50px;"></h1> -->
 									<!-- <h1><span id="js-rotating">需要掌握在制造企业自己手中</span></h1> -->
 									<!-- <p class="p-heading p-large">--- 20 年+深耕工业电气行业精益数字化</p> -->
 									<a class="btn-solid-lg page-scroll" href="#home">了解我们</a>
@@ -146,7 +146,7 @@
 								<div class="card animate__animated  animate__backInLeft">
 									<img class="card-image" src="images/testimonial-1.jpg" alt="alternative">
 									<div class="card-body">
-										<div class="testimonial-author">企业流程制定执行者</div>
+										<div class="testimonial-author">企业流程制定者、执行者</div>
 										<!-- <div class="testimonial-text">
 											<p><b></b><a href="">新工厂、车间规划</a></p>
 											<p><b></b><a href="">精益咨询</a></p>
@@ -196,7 +196,7 @@
 
 
 		<div id="cost">
-			<h2 style="text-align: center;margin: 50px 0;">LINXPaaS---- 为您节省80%数字化工厂总成本</h2>
+			<h2 style="text-align: center;margin: 50px 0;">LINXPaaS---- 为您节省80%数字化工厂建设总成本</h2>
 			<h2 style="text-align: center;margin: 50px 0;">低代码开发<span style="color: #14bf98; font-weight: bold;"> +
 				</span>配置化MOM 软件系统模板</h2>
 		</div>
@@ -282,7 +282,7 @@
 							<div class="card-body">
 								<h4 class="card-title">加速制造运营创新</h4>
 								<p>
-									将新产品导入、制造过程管理自动化，为客户创造更快、更好的服务和商品
+									将新产品导入、制造过程管理自动化，为客户创造更快、更好的服务和商品。
 								</p>
 							</div>
 						</div>
@@ -295,8 +295,7 @@
 							</span>
 							<div class="card-body">
 								<h4 class="card-title">深化运营管理数字化</h4>
-								<p>将整个企业（包括供应商）创建流畅的信息、洞察和行为流，
-									并提高制造运营提升的准确性和目标性。</p>
+								<p>为整个企业（包括供应商）创建流畅的信息流，提高制造运营效率。</p>
 							</div>
 						</div>
 						<!-- end of card -->
@@ -308,8 +307,7 @@
 							</span>
 							<div class="card-body">
 								<h4 class="card-title">赋能员工，全员参与数字化</h4>
-								<p>简化运营过程的数字化转型对于IT技术的依赖，
-									为员工配备数字化助手，不放过每一个可以数字化的机会。</p>
+								<p>简化运营数字化转型对于复杂IT技术的高度依赖,为员工配备简单的数字化工具，抓住每一个可以数字化的机会。</p>
 							</div>
 						</div>
 						<!-- end of card -->
@@ -422,7 +420,7 @@
 						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
 						<p class='white'><img src='images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
-						<p class='white'><img src='images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室
+						<p class='white'><img src='images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼103室
 						</p>
 					</div>
 
