--- a/public/about.html
+++ b/public/about.html
@@ -115,20 +115,14 @@
 		<div id="jianJie">
 			<div style="width: 60%;margin: 0 auto;">
 				<h2>灵娃简介</h2>
-				<p>上海灵娃智能创立于1999年，上海市高新技术企业。拥有自主知识产权低代码开发平台。
-				<p>
+				<p>上海灵娃智能创立于1999年，上海市高新技术企业。拥有自主知识产权低代码开发平台。</p>
 				<p>基于平台，公司历经20余年发展，在工业电气、汽车外饰、汽车电子、军工航天、装备制造业、医疗器械、纺织成衣、光伏、模具制造、陶瓷材料、
-					石油化工仓储等多个行业实际交付了多个实际数字化工厂项目，充分验证了平台及模板。
-				<p>
+					石油化工仓储等多个行业实际交付了多个实际数字化工厂项目，充分验证了平台的灵活开发能力及模板功能的实际可落地性。</p>
 				<p>实际案例验证覆盖了：机加工、钣金冲压、铝合金压铸、注塑、机电装配、
 					电子SMT等多种工艺类型，涉及多种产品类型：电气高压开关、高中压母线、变压器、低压开关、断路器、空气开关、电气铜材、
-					电气桥架、开关柜、汽车内饰、汽车外饰、
-					平面显示器、硬盘、路由器、网络防火墙、机顶盒等。
-				<p>
+					电气桥架、开关柜、汽车内饰、汽车外饰、平面显示器、硬盘、路由器、网络防火墙、机顶盒等。</p>
 			</div>
 		</div>
-
-
 
 		<!-- Description -->
 		<div class="cards-1" id="hexin">
@@ -144,7 +138,7 @@
 							</span>
 							<div class="card-body">
 								<h4 class="card-title">高度</h4>
-								<p>从大型制造业董事长、总经理及核心管理团队视角出发，注重系统整体系统化、精益化、可落地、可操作，集合规划、制造线体、软件系统一体化的立体解决方案</p>
+								<p>从大型制造业董事长、总经理及核心管理团队视角出发，注重系统整体系统化、精益化、可落地、可操作，集合规划、制造线体、软件系统一体化的立体解决方案。</p>
 							</div>
 						</div>
 						<!-- end of card -->
@@ -358,7 +352,7 @@
 						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
 						<p class='white'><img src='../images/icon/adress.png' class='small'> :
-							上海市浦东新区灵岩南路295号12号楼12-103室
+							上海市浦东新区灵岩南路295号12号楼103室
 						</p>
 					</div>
 
