--- a/public/customer.html
+++ b/public/customer.html
@@ -402,7 +402,7 @@
 		 				<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
 		 				<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 		 				</p>
-		 				<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室
+		 				<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼103室
 		 				</p>
 		 			</div>
 		 
