--- a/public/lowCode.html
+++ b/public/lowCode.html
@@ -127,7 +127,7 @@
 					<div class="cardImg">
 						<img src="../images/lowCode/biancheng.png">
 					</div>
-					<h4 class="card-title">"无"开发<br />经验编程</h4>
+					<h4 class="card-title">"无"开发编<br />程经验要求</h4>
 				</div>
 				<div class="card animate__animated animate__backInLeft">
 					<div class="cardImg">
@@ -174,7 +174,7 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
 							</div>
-							<div class="card-body" style="padding: 2rem 1em">
+							<div class="card-body" style="padding: 2rem 1em;text-align:justify">
 								<h3 class="card-title">平台工具而非项目聚合产品</h3>
 								以开发平台为目标向开发多年研发积累形成的强大工具，而非根据项目聚合形成的配置化产品。
 								可让工程师通过简单、低代码的开发方式迅速实现贴合现场的二次应用开发，不需要复杂的编程过程。
@@ -187,12 +187,11 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
 							</div>
-							<div class="card-body" style="padding: 2rem 1em">
+							<div class="card-body" style="padding: 2rem 1em;text-align:justify">
 								<h3 class="card-title">坚实的应用软件落地验证</h3>
-								<ul class="list-unstyled li-space-lg">
-									依托平台开发的应用软件在已经经过了20年+实际工业互联场景使用验证，实现了在工业电器、汽车零部件、军工、航天、通用机械等行业大量实际落地交付。
-									覆盖了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同行业的应用开发及落地。
-
+								依托平台开发的应用软件已经过20年+实际工业互联项目的交付验证，不断迭代，实现了在工业电气、汽车机械和汽车电子零部件、
+								军工、航天、通用机械等行业大量实际落地交付。 通过实际交付的项目，
+								MOM软件模板实现了电镀工艺、冲压工艺、SMT工艺、注塑工艺、机加工工艺、热处理工艺、机电产品装配工艺等不同工艺流程的覆盖验证。
 							</div>
 						</div>
 						<!-- end of card -->
@@ -202,10 +201,9 @@
 							<div class="card-image">
 								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
 							</div>
-							<div class="card-body" style="padding: 2rem 1em">
+							<div class="card-body" style="padding: 2rem 1em;text-align:justify">
 								<h3 class="card-title">内嵌数采协议</h3>
-								内嵌了数百种工业数采协议，有效解决工业互联落地之中为复杂的痛点。
-								根据实际数采协议，只需要进行通讯、地址、内容的匹配就可以完成数采过程。不再需要高昂成本的数采IoT盒子。
+								内嵌百种工业数采协议，有效解决工业互联落地之中较为复杂的痛点。只需要进行通讯、地址、内容的匹配就可完成数据采集。无需采购高昂成本的数采IoT盒子。
 							</div>
 						</div>
 
@@ -378,8 +376,8 @@
 							</span>
 							<div class="card-body">
 								<h4 class="card-title">MOM 系统</h4>
-								<p>
-									MES 制造执行系统、APS 高级计划排程系统、WMS 仓储管理系统、EAM设备|工装|检具|模具管理系统、
+								<p style="text-align:justify">
+									MES制造执行系统、APS高级计划排程系统、WMS仓储管理系统、EAM设备|工装|检具|模具管理系统、
 									QMS质量管理系统、EMS能源管理系统等主要数字化工厂的软件系统。
 									根据实际现场实际情况，只需要根据实际现场流程，
 									进行简单调整适配就可以完成适用于不同工厂、车间、产线的软件应用。
@@ -395,8 +393,8 @@
 								<i class="fas fa-binoculars fa-stack-1x"></i>
 							</span>
 							<div class="card-body">
-								<h4 class="card-title">精益管理系统</h4>
-								<p>ANDON暗灯系统，E-CALL电子叫料，Suggestion 培训管理系统，合理化建议 Suggestion，电子操作指导书E-SOP，
+								<h4 class="card-title">精益管理工具</h4>
+								<p style="text-align:justify">ANDON暗灯系统，E-CALL电子叫料， Training培训管理系统，Suggestion合理化建议 ，E-SOP电子操作指导书，
 									SPC统计过程控制系统，LayorAudit分层审核管理系统，CPC变更点管理系统 ，LeanSPF精益现场管理。</p>
 							</div>
 						</div>
@@ -410,7 +408,7 @@
 							</span>
 							<div class="card-body">
 								<h4 class="card-title">数据采集工具</h4>
-								<p>内嵌 1000+种数据采集通讯协议，在实际使用中仅需要进行通讯和地址配置，
+								<p style="text-align:justify">内嵌1000+种数据采集通讯协议，在实际使用中仅需要进行通讯和地址配置，
 									就可以完成数据采集。</p>
 							</div>
 						</div>
@@ -526,7 +524,7 @@
 						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
 						<p class='white'><img src='../images/icon/adress.png' class='small'> :
-							上海市浦东新区灵岩南路295号12号楼12-103室
+							上海市浦东新区灵岩南路295号12号楼103室
 						</p>
 					</div>
 
