--- a/public/mom.html
+++ b/public/mom.html
@@ -61,8 +61,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px" src="../images/LinxLogo.png"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
+					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -119,11 +119,188 @@
 		</div>
 
 
+		<div id="home" class="cards-2">
+			<div class="col-lg-12">
+				<h2>工业电气解决方案的领导者</h2>
+			</div>
+
+			<!-- end of row -->
+			<div class="row" style="display: flex;justify-content: space-around;width: 95%;margin: 0 auto">
+				<!-- Card -->
+				<div class="card">
+					<div class="card-image">
+						<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
+					</div>
+					<div class="card-body" style="height: 250px;">
+						<h3 class="card-title">PCBA行业APS解决方案</h3>
+						<p>涉及产品案例:</p>
+						<ul class="list-unstyled li-space-lg">
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">液晶显示器</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">机械硬盘</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">路由器</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">机顶盒</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车BCM</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车空调控制</div>
+							</li>
+						</ul>
+
+					</div>
+					<!-- <div class="button-container">
+      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+      					</div> -->
+					<!-- end of button-container -->
+				</div>
+				<!-- end of card -->
+
+				<!-- Card -->
+				<div class="card">
+					<div class="card-image">
+						<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
+					</div>
+					<div class="card-body" style="height: 250px;">
+						<h3 class="card-title" style="text-align: left;">汽车零部件行业MOM解决方案</h3>
+						<p>涉及产品案例:</p>
+						<ul class="list-unstyled li-space-lg">
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车座椅</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">离合器壳体</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">变速箱壳体</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">变速箱凸轮轴</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车BCM</div>
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车空调控制</div>
+							</li>
+						</ul>
+					</div>
+					<!-- <div class="button-container">
+      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+      					</div> -->
+					<!-- end of button-container -->
+				</div>
+				<!-- end of card -->
+
+				<!-- Card -->
+				<div class="card">
+					<div class="card-image">
+						<img class="img-fluid" src="../images/fang.png" alt="alternative">
+					</div>
+					<div class="card-body" style="height: 250px;">
+						<h3 class="card-title">防伪防窜货解决方案</h3>
+						<p>涉及产品案例:</p>
+						<ul class="list-unstyled li-space-lg">
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">防伪防窜货解决方案</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">溯源</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">大数据营销</div>
+							</li>
+						</ul>
+					</div>
+					<!-- <div class="button-container">
+      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+      					</div> -->
+					<!-- end of button-container -->
+				</div>
+				<!-- end of card -->
+
+				<!-- Card -->
+				<div class="card">
+					<div class="card-image">
+						<img class="img-fluid" src="../images/hanjie.jpg" alt="alternative">
+					</div>
+					<div class="card-body" style="height: 250px">
+						<h3 class="card-title">焊接(多行业)解决方案</h3>
+						<p>涉及产品案例:</p>
+						<ul class="list-unstyled li-space-lg">
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">汽车座椅</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">风力发电</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">高铁</div>
+							</li>
+						</ul>
+					</div>
+					<!-- 	<div class="button-container">
+      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+      					</div> -->
+					<!-- end of button-container -->
+				</div>
+				<!-- end of card -->
+
+				<!-- Card -->
+				<div class="card">
+					<div class="card-image">
+						<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
+					</div>
+					<div class="card-body" style="height: 250px">
+						<h3 class="card-title">光伏电气</h3>
+						<p>涉及产品案例:</p>
+						<ul class="list-unstyled li-space-lg">
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">太阳能光伏</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">防水隔热</div>
+							</li>
+							<li class="media">
+								<i class="fas fa-square"></i>
+								<div class="media-body">节能省电</div>
+							</li>
+						</ul>
+					</div>
+					<!-- <div class="button-container">
+      						<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
+      					</div> -->
+					<!-- end of button-container -->
+				</div>
+				<!-- end of card -->
+
+
+			</div>
+			<!-- end of row -->
+		</div>
+		<!-- end of container -->
+		</div>
+
 
 
 		<div id="AllProduct">
 			<h2>配置化应用实施,灵活低代码开发</h2>
-			<div style="width: 100%; background-color: #fbfbfb;">
+			<div style="width: 100%; background-color: #fbfbfb;text-align: justify;">
 				<!-- 第一个 -->
 				<div id="details" class="accordion" style="width: 80%; margin: 0 auto;">
 					<!-- <h2 style="text-align: center;margin-bottom: 50px;">在各行各业，让数据驱动制造</h2> -->
@@ -150,7 +327,7 @@
 
 
 			<!-- 第二个 -->
-			<div class="tabs" style="width: 80%; margin: 0 auto;">
+			<div class="tabs" style="width: 80%; margin: 0 auto;text-align: justify;">
 				<div class="area-1">
 					<div class="tabs-container">
 						<!-- <a class="nav-link"></a> -->
@@ -176,7 +353,7 @@
 
 
 			<!-- 第三个 -->
-			<div style="width: 100%; background-color: #fbfbfb;">
+			<div style="width: 100%; background-color: #fbfbfb;text-align: justify;">
 				<div class="accordion" style="width: 80%;margin: 0 auto;">
 					<div class="area-1 shinaide">
 					</div>
@@ -206,20 +383,17 @@
 
 
 			<!-- 第四个 -->
-			<div class="tabs" style="width: 80%; margin: 0 auto;">
+			<div class="tabs" style="width: 80%; margin: 0 auto;text-align: justify;">
 				<div class="area-1">
 					<div class="tabs-container">
 						<h2 style="margin-bottom: 30px;">QMS质量管理系统</h2>
 						<div class="tab-content">
 							<!-- Tab -->
 							<div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
-								<p>QMS是质量管理系统（Quality Management System）的缩写，是从设计、研制、生产、检验、销售、使用全过程的质量管理，
-									并予制度化、标准化，成为企业内部质量工作的要求和活动程序等的管理，
-									更制度化、更标准化，有效控制并跟踪企业产品全流程质量，建立质量数字化管理体系。</p>
-								<p>LINX-QMS核心业务以生产为主流程，主要有进货流程检验、生产过程检验（首检、巡检、工序完工检、终检），
-									销售出库检验，与检验工具、测试设备和自动线集成，
-									实现质量数据数字化管理, 并可集合供应来奶实现供应来奶质量协同</p>
-								<p>通过与MES、ERP系统的集成，实现质量标准、检测方法、关键工序、工艺控制要求、定期审核、统计控制质量管理要求的水平提升。</p>
+								<p>QMS质量管理系统, 以来料检验及生产制造为主流程，覆盖进货检验、生产过程检验（首检、巡检、工序完工检、终检）， 销售出库检验，与检验工具、测试设备和自动线集成，
+									实现质量数据数字化管理。</p>
+								<p>对于来料检验，系统实现全自动检测任务计划排程及人员调度，自动检测设备数据采集及汇聚，与ERP实现检验计划及监测数据的交互。</p>
+								<p>可通过与MES、ERP系统的集成，实现质量标准、检测方法、关键工序、工艺控制要求、定期审核、统计控制质量管理要求的水平提升。</p>
 							</div>
 						</div>
 					</div>
@@ -231,7 +405,7 @@
 
 
 			<!-- 第五个 -->
-			<div style="width: 100%; background-color: #fbfbfb;">
+			<div style="width: 100%; background-color: #fbfbfb;;text-align: justify;">
 				<div class="accordion" style="width: 80%;margin: 0 auto;">
 					<div class="area-1 xuji">
 					</div>
@@ -240,16 +414,10 @@
 						<div class="accordion-container" id="accordionTwo">
 							<h2>EAM设备管理系统</h2>
 							<div class="item">
-								<p>EAM设备维修体系系统模块，覆盖设备、工装、夹具、检具、模具的一体化管理。
-								<p>涵盖固定资产管理、点检、维修、预防性保养、备品备件管理，
-									覆盖设备全生命周期的管理包括事后维修、定期校验、预防维护、
-									生产维护，利用维护保养计划提醒、派工的电子化操作，提升维护保养的及时性、
-									达成率，降低设备发生故障的机率，提高企业利润、降低成本。</p>
-								<p> 实现电脑、平板等多种接入方式，方便用户及时、高效地操作处理。</p>
-								全面实现设备效率、维护保养的电子化、网络化、智能化，更加及时有效地反应设备运行情况。</p>
-								<p>通过与ANDON系统的集成，实现现场生产、设备状态的全可视化，提供实时数据信息，有助于提升现场管理水平。
-									集成震动、电压、 电流传感器实现设备的预期性维修。</p>
-								</p>
+								<p>EAM设备管理系统，覆盖设备、工装、夹具、检具、模具的一体化管理，
+									涵盖资产管理、点检、维修、预防性保养、备品备件管理。</p>
+								<p>覆盖设备全生命周期的管理包括事后维修、定期校验、预防性维护、 生产维护，根据维护保养计划电子化派工，
+									提升维护保养的及时性、 达成率，降低设备发生故障的机率，提高企业利润、降低成本。</p>
 							</div>
 						</div>
 					</div>
@@ -259,18 +427,20 @@
 
 
 			<!-- 第六个 -->
-			<div class="tabs" style="width: 80%; margin: 0 auto;">
+			<div class="tabs" style="width: 80%; margin: 0 auto;;text-align: justify;">
 				<div class="area-1">
 					<div class="tabs-container">
 						<h2 style="margin-bottom: 30px;">灵娃APS系统</h2>
 						<div class="tab-content">
 							<!-- Tab -->
 							<div class="tab-pane fade show active" id="tab-2" role="tabpanel" aria-labelledby="tab-2">
-								<p>订单评审：生产订单、附件订单、预装件订单,
-									资源管理：产能资源、产线资源、机器设备资源、劳动力、标准节拍工时、齐套欠料。</p>
-								<p>多品种多工序的生产计划排程，可采用APS+ERP+MES模式的集中排产或分层排产</p>
-								<p>考虑设备和人员的负荷，精确安排工厂中的每一台设备和每一个人员未来日程作业。</p>
-								<p>订单的滚动预测，生产.采购的可视化排程，缩短制造提前期，消减库存，提高客户交货期的遵守率</p>
+
+								<p>系统综合考虑实际生产计划的多变性，可设置多约束条件，可选优先级设定，实现总舵解决方案的优选计划方案，高效指挥调度整体工厂运行。
+								<p>
+								<p>系统支持优先级变化、约束条件变化、紧急插单、临时计划调整等实际运营中的灵活多变要求。
+									多品种多工序的生产计划排程，可采用APS+ERP+MES模式的集中排产或分层排产。</p>
+								<p>考虑设备和人员的负荷，精确安排工厂中的每一台设备和每一个人员未来日程作业。
+									订单的滚动预测，生产，采购的可视化排程，缩短制造提前期，消减库存，提高客户交货期的遵守率。</p>
 							</div>
 						</div>
 					</div>
@@ -282,48 +452,49 @@
 
 
 		<!-- Footer -->
-		 <div class='footer' style='overflow-x: hidden;'>
-		 	<div class='row' style='display: flex; justify-content: center;'>
-		 		<div class='col-md-3'>
-		 			<div class='text-container about'>
-		 				<h4>联系我们</h4>
-		 				<p class='white'><img src='../images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
-		 				<p class='white'><img src='../images/icon/iphone.png' class='small'> : 18017032338</p>
-		 				<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
-		 				<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
-		 				</p>
-		 				<p class='white'><img src='../images/icon/adress.png' class='small'> : 上海市浦东新区灵岩南路295号12号楼12-103室
-		 				</p>
-		 			</div>
-		 
-		 		</div>
-		 
-		 		<div class='col-md-3'>
-		 			<div class='text-container'>
-		 				<h4>我们的使命</h4>
-		 				<p class='white'>赋能个性化制造</p>
-		 				<p class='white'>化繁为简 为数字化转型赋能</p>
-		 				<p class='white'>持续研发"简&智"开发工具和制造管理信息系统</p>
-		 				<p class='white'>通过服务为制造型企业数字化赋能，提升制造企业效率</p>
-		 			</div>
-		 		</div>
-		 		<div class='col-md-4'>
-		 			<div class='text-container' style='text-align: center;margin: 0 auto;'>
-		 				<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
-		 				<div style="min-height: 250px; width: 100%;" id="map"></div>
-		 			</div>
-		 		</div>
-		 	</div>
-		 </div>
-		 <div class='copyright'>
-		 	<div class='container'>
-		 		<div class='row'>
-		 			<div class='col-lg-12'>
-		 				<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
-		 			</div>
-		 		</div>
-		 	</div>
-		 </div>
+		<div class='footer' style='overflow-x: hidden;'>
+			<div style='display: flex; justify-content: center;'>
+				<div class='col-md-3'>
+					<div class='text-container about'>
+						<h4>联系我们</h4>
+						<p class='white'><img src='../images/icon/phone.png' style="width:26px;"> : 021-58982160</p>
+						<p class='white'><img src='../images/icon/iphone.png' class='small'> : 18017032338</p>
+						<!-- <p class='white'><img src='images/icon/email.png' class='small'> : qun_wang@linxvalley.com </p> -->
+						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
+						</p>
+						<p class='white'><img src='../images/icon/adress.png' class='small'> :
+							上海市浦东新区灵岩南路295号12号楼103室
+						</p>
+					</div>
+
+				</div>
+
+				<div class='col-md-3'>
+					<div class='text-container'>
+						<h4>我们的使命</h4>
+						<p class='white'>赋能个性化制造</p>
+						<p class='white'>化繁为简 为数字化转型赋能</p>
+						<p class='white'>持续研发"简&智"开发工具和制造管理信息系统</p>
+						<p class='white'>通过服务为制造型企业数字化赋能，提升制造企业效率</p>
+					</div>
+				</div>
+				<div class='col-md-4'>
+					<div class='text-container' style='text-align: center;margin: 0 auto;'>
+						<!-- <h6 style='color: #FFFFFF'>我们的地址</h6> -->
+						<div style="min-height: 250px; width: 100%;" id="map"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class='copyright'>
+			<div class='container'>
+				<div class='row'>
+					<div class='col-lg-12'>
+						<p class='p-small'>备案号：沪ICP备16031549号-1　 <a>沪公网安备 31010602003203号</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<!-- Scripts -->
@@ -349,11 +520,11 @@
 		point: "121.503318,31.162774",
 		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
-	
+
 	var map; //Map实例  
 	function map_init() {
 		map = new BMap.Map("map");
-	
+
 		//第1步：设置地图中心点，上海市  
 		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
@@ -389,25 +560,25 @@
 			isOpen: 1
 		});
 		map.addControl(ctrlOve);
-	
+
 		//第6步：向地图中添加比例尺控件  
 		var ctrlSca = new window.BMap.ScaleControl({
 			anchor: BMAP_ANCHOR_BOTTOM_LEFT
 		});
 		map.addControl(ctrlSca);
-	
+
 		//第7步：绘制点    
 		for (var i = 0; i < markerArr.length; i++) {
 			var p0 = markerArr[i].point.split(",")[0];
 			var p1 = markerArr[i].point.split(",")[1];
 			var maker = addMarker(new window.BMap.Point(p0, p1), i);
 			addInfoWindow(maker, markerArr[i], i);
-	
+
 		}
 	}
-	
-	
-	
+
+
+
 	// 添加标注  
 	function addMarker(point, index) {
 		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
@@ -422,7 +593,7 @@
 		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
 		return marker;
 	}
-	
+
 	// 添加信息窗口  
 	function addInfoWindow(marker, poi) {
 		//pop弹窗标题  
@@ -442,7 +613,7 @@
 			title: title,
 			width: 200
 		});
-	
+
 		var openInfoWinFun = function() {
 			marker.openInfoWindow(infoWindow);
 		};
