--- a/public/product.html
+++ b/public/product.html
@@ -33,6 +33,7 @@
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
 			rel="stylesheet"> -->
+		<link rel="stylesheet" href="../css/animate.min.css">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -114,10 +115,11 @@
 
 
 		<div id="projects" class="filter">
-			<div class="container">
+			<h2>制造精益现场管理工具</h2>
+			<div class="containerMap">
 				<div class="row">
 					<div class="col-lg-12">
-						<h2>制造精益现场管理工具</h2>
+						<h2>&nbsp;</h2>
 					</div>
 					<!-- end of col -->
 				</div>
@@ -126,60 +128,60 @@
 					<div class="col-lg-12">
 						<!-- end of button group -->
 						<div class="grid">
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed1">
 								<a class="popup-with-move-anim" href="#project-1">
-									<div class="element-item-overlay"><span>ANDON暗灯-现场快反系统</span></div><img
+									<div class="element-item-overlay"><span>ANDON 现场快反管理工具</span></div><img
 										src="../images/product1.jpg" alt="alternative">
 								</a>
 							</div>
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed2">
 								<a class="popup-with-move-anim" href="#project-2">
-									<div class="element-item-overlay"><span>E-Suggestion 合理化建议工具</span></div><img
+									<div class="element-item-overlay"><span>E-Suggestion 员工合理化建议管理工具</span></div><img
 										src="../images/product2.jpg" alt="alternative">
 								</a>
 							</div>
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed3">
 								<a class="popup-with-move-anim" href="#project-3">
-									<div class="element-item-overlay"><span>E-CALL拉动式供料系统</span></div><img
+									<div class="element-item-overlay"><span>E-Call 电子物料拉动工具</span></div><img
 										src="../images/product3.jpg" alt="alternative">
 								</a>
 							</div>
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed4">
 								<a class="popup-with-move-anim" href="#project-4">
-									<div class="element-item-overlay"><span>SPC 统计过程管理工具</span></div><img
+									<div class="element-item-overlay"><span>SPC 统计过程质量控制工具</span></div><img
 										src="../images/product4.jpg" alt="alternative">
 								</a>
 							</div>
 
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed5">
 								<a class="popup-with-move-anim" href="#project-5">
-									<div class="element-item-overlay"><span>EIM事件管理系统</span></div><img
+									<div class="element-item-overlay"><span>CPC 变更点管理工具</span></div><img
 										src="../images/product5.jpg" alt="alternative">
 								</a>
 							</div>
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed6">
 								<a class="popup-with-move-anim" href="#project-6">
-									<div class="element-item-overlay"><span>Layer Audit– 分层审核工具</span></div><img
+									<div class="element-item-overlay"><span>Layor Audit 分层审核管理工具</span></div><img
 										src="../images/product6.jpg" alt="alternative">
 								</a>
 							</div>
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed7">
 								<a class="popup-with-move-anim" href="#project-7">
-									<div class="element-item-overlay"><span>E-SOP电子操作指导</span></div><img
+									<div class="element-item-overlay"><span>E-SOP 电子操作指导书工具</span></div><img
 										src="../images/product7.jpg" alt="alternative">
 								</a>
 							</div>
 
 
-							<div class="element-item">
+							<div class="element-item animate__animated animate__backInDown" id="flexed8">
 								<a class="popup-with-move-anim" href="#project-8">
-									<div class="element-item-overlay"><span>Training培训系统</span></div><img
+									<div class="element-item-overlay"><span>Training 员工培训管理工具</span></div><img
 										src="../images/product8.jpg" alt="alternative">
 								</a>
 							</div>
@@ -209,10 +211,10 @@
 				</div>
 				<!-- end of col -->
 				<div class="col-lg-4">
-					<h3>Andon暗灯—现场快反系统</h3>
+					<h3>ANDON 现场快反管理工具</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
-					<p>作为一种整合现场信息系统的生产现场控制快反系统，通过“人”，“机”，“料”，“法”，“环” 系统性的将生产异常事件信息化，处理流程标准化，
+					<p>作为一种整合现场信息系统的生产现场控制快反系统, 通过 "人"， "机"， "料"， "法"， "环" 系统性的将生产异常事件信息化，处理流程标准化，
 						帮助问题快速有效解决和提高生产效率的同时，对数据进行合理的统计分析，解决方案知识的有效积累，保持对工厂产线进行持续的改善。</p>
 					<p>系统目的：可视化、公开化、透明化，形象直观地暴露问题，迅速快捷地传递信息，促进企业快反体系形成和建立。</p>
 					<p>系统功能：计划、物料、设备、品质、产品、水电等异常事件报警类型定义；语音或闪烁报警、告警页面、邮件或手机推送等多种报警方式和逐级上报跟踪处理；
@@ -235,12 +237,12 @@
 					<img class="img-fluid" src="../images/product2.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>E-Suggestion 合理化建议工具</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>E-Suggestion 员工合理化建议管理工具</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
-					<p>合理化建议是制造自下而上现场持续改善工作的重要通道，灵娃E-Suggestion工具帮助制造现场实现合理化建议的收集、跟踪、汇总。</p>
-					<p>并实现合理化建议对于提出建议人员的反馈，形成正向闭环。并可以根据位置、设备、问题的历史查询，有效助力企业持续推进持续改善的环境氛围。</p>
+					<p>灵娃合理化建议管理工具，定位于制造企业自下而上的现场持续改善，以软件的方式帮助制造现场实现合理化建议的收集、跟踪、管理与总结。</p>
+					<p>并对提出建议人员的建议给与反馈记录，形成正向闭环。可以根据位置、设备、问题类别进行的历史查询和汇总，有效助力企业形成持续推进持续改善的环境氛围。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -259,8 +261,8 @@
 					<img class="img-fluid" src="../images/product3.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>E-CALL拉动式供料系统</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>E-Call 电子物料拉动工具</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
 					<p>E-CALL拉动式供料系统，是企业实施精益生产的物料配送方式，实现在需要时，按需要量，配送物料至相应产线站位的控制系统，能使物流和信息流有机的结合，避免人力、物料、空间的浪费。
@@ -288,15 +290,13 @@
 					<img class="img-fluid" src="../images/product4.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>QMS质量管理系统</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>SPC 统计过程质量控制工具</h3>
 					<hr class="line-heading">
 					<h6>核心系统</h6>
-					<p>QMS是质量管理系统（Quality Management System）的缩写，是从设计、研制、生产、检验、销售、使用全过程的质量管理，并予制度化、标准化，
-						成为企业内部质量工作的要求和活动程序等的管理，更制度化、更标准化，有效控制并跟踪企业产品全流程质量，建立质量数字化管理体系。</p>
-					<p>LINX-QMS核心业务以生产为主流程，主要有进货流程检验、生产过程检验（首检、巡检、工序完工检、终检），销售出库检验，与检验工具、
-						测试设备和自动线集成，实现质量数据数字化管理, 并可集合供应来奶实现供应来奶质量协同。</p>
-					<p>通过与MES、ERP系统的集成，实现质量标准、检测方法、关键工序、工艺控制要求、定期审核、统计控制质量管理要求的水平提升。</p>
+					<p>SPC是对通过对制造过程数据、质量检测数据进行统计过程分析实现质量控制的利器，是品质改善的行业标准方法。</p>
+					<p>灵娃SPC工具，可单独使用，也可以结合MES/MOM/QMS的数据采集系统，实现生产线在线数据、质检实验室离线数据的联动，
+						对于被监控数据的趋势以及分布加以监测， 防患于未然，避免质量问题扩大化，控制质量风险，降低质量成本。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -315,20 +315,13 @@
 					<img class="img-fluid" src="../images/product5.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>变更点管理 CPC工具</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>CPC 变更点管理工具</h3>
 					<hr class="line-heading">
 					<h6>核心工具</h6>
-					<p>生产制造需要的是稳定不便，但实际变化和变更不可以避免，如何管控变更，成为有效稳定生产的重要工具。
-						变更不可怕， 可怕的是无计划的变更，无协同的变更。</p>
-					<p>产品变更（ 设计、规范、产品参数….）
-						物料变化 （ 供应商，规格、规范…)
-						设备变化 （ 工装、夹具、设备调整、程序变化、）
-						人员变动（ 新员工、新上岗、…)
-						工艺变化 （ 工艺流程、工艺参数。
-					</p>
-					<p>灵娃CPC工具，全面管理现场变更，支持手机端，变更计划，提前通知变更消息，让变更变得简单可控。
-					</p>
+					<p>稳定不变的生产是效率最大的，但在实际运营中，变更是常态。变更不可怕，可怕的是无计划的变更，无协同的变更。</p>
+					<p>灵娃CPC工具，有效协同产品变更、物料变化、设备变化 、 人员变动、工艺变化 、等，让变更处于可控状态，以数字化的手段最大化的控制变更带来的质量和效率损失。</p>
+					<p>全面实现现场变更有效管理。支持手机端，变更计划，提前通知变更消息，让变更变得简单可控。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -347,12 +340,12 @@
 					<img class="img-fluid" src="../images/product6.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>Layer Audit– 分层审核工具</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>Layor Audit 分层审核管理工具</h3>
 					<hr class="line-heading">
 					<h6>生产管理系统工具</h6>
-					<p>分层审核是肢体组织- 企业组织自上而下进行管理的利器，发现的问题是未来改进的源泉。</p>
-					<p>灵娃分层审核工具支持多层级现场审核计划管理，支持手机端，针对个人的审核计划提醒， 有效跟踪审核发现问题的整改计划进度。让审核不再流于形式。</p>
+					<p>灵娃Layer Audit分层审核工具是企业实现自上而下进行管理软件，支持多层级现场审核计划管理，支持临时现场审核管理，对于审核的问题点以目视化、系统化的方式跟踪、提醒，管理。</p>
+					<p>支持手机端，针对个人的审核计划提醒， 有效跟踪审核发现问题的整改计划进度。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -371,14 +364,15 @@
 					<img class="img-fluid" src="../images/product7.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>E-SOP电子操作指导</h3>
+				<div class="col-lg-4" style="text-align: justify;">
+					<h3>E-SOP 电子操作指导书工具</h3>
 					<hr class="line-heading">
 					<h6>生产管理系统工具</h6>
-					<p>ESOP电子操作指导系统，是自主研发的，对于现场各类生产、质量文档电子化，以及实时正确显示的系统。系统通过工作流审批，将各类生产、
-						质量文档电子化，上传系统，并通过与产品、产线、工位的绑定，确保操作文档正确显示。
+					<p>灵娃ESOP电子操作指导书工具，用于生产现场的各类生产、工艺、质量、设备、人员等文档的电子化管理及现场实施显示工具，
+						系统涵盖工作流审批，可结合变更点管理，将各类文档、视频电子化系统性管理，并可结合MES实现根据生产产品对应的文件与产品、产线、工位进行绑定，确保每一次生产操作文档的正确显示。通过与PLM或CAX系统的接口，可以实现针对所制造产品的图纸实时调取和展示。
 					</p>
-					<p>系统真正实现无纸化操作，提升换线文档更换速度，为企业降低成本，提高企业形象。把文档电子化，并统一管理、集中控制，版本控制清晰，提高作业质量。</p>
+					<p>结合灵娃文档管理工具，实现各种受控文件的统一管理、集中控制。</p>
+
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -397,17 +391,13 @@
 					<img class="img-fluid" src="../images/product8.jpg" alt="alternative">
 				</div>
 				<!-- end of col -->
-				<div class="col-lg-4">
-					<h3>Training培训系统</h3>
+				<div class="col-lg-4" style="text-align: justify">
+					<h3>Training 员工培训管理工具</h3>
 					<hr class="line-heading">
 					<h6>生产管理系统工具</h6>
-					<p>Training培训系统，是灵娃自主研发的，用于企业员工培训的系统，包括培训资源、培训申请、培训计划、培训实施、培训报表，对员工培训要求、培训内容定义明确，
-						并严格监督，确保上岗的员工具备合格的资格，从现场人员角度达到生产、质量稳定，降低不良率与异常，提高企业效率。
-					</p>
-					<p>培训系统通过流程化管理，了解员工真正实用、见效的培训，并通过这些培训让员工能及时获取有用的技能知识。
-					</p>
-					<p>通过与MES系统的集成，实现员工持证上岗的实现，有利于提升现场管理水平、质量提升。
-					</p>
+					<p>灵娃Training员工培训管理工具系统，用于企业操作工培训管理，覆盖培训资料、培训流程（计划、申请、审批、派工），培训实施、培训报表，分级培训、
+						多技能工培训、返岗培训等全流程，系统以软件形式实现了通用汽车、福特汽车、日产汽车等大型车企对于培训管理的流程和管控要求。</p>
+					<p>通过与MES系统的集成，可以实现员工持证上岗控制。</p>
 					<a class="btn-solid-reg" href="#your-link">详情</a> <a class="btn-outline-reg mfp-close as-button"
 						href="#projects">返回</a>
 				</div>
@@ -432,7 +422,7 @@
 						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
 						<p class='white'><img src='../images/icon/adress.png' class='small'> :
-							上海市浦东新区灵岩南路295号12号楼12-103室
+							上海市浦东新区灵岩南路295号12号楼103室
 						</p>
 					</div>
 
