--- a/public/programme.html
+++ b/public/programme.html
@@ -33,6 +33,7 @@
 			rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
 			rel="stylesheet"> -->
+		<link rel="stylesheet" href="../css/animate.min.css">
 		<link href="../css/bootstrap.css" rel="stylesheet">
 		<link href="../css/fontawesome-all.css" rel="stylesheet">
 		<link href="../css/swiper.css" rel="stylesheet">
@@ -61,8 +62,8 @@
 			<!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Aria</a> -->
 
 			<!-- Image Logo -->
-			<a class="navbar-brand logo-image" href="../index.html"><img
-					style="height: 60px" src="../images/LinxLogo.png"></a>
+			<a class="navbar-brand logo-image" href="../index.html"><img style="height: 60px"
+					src="../images/LinxLogo.png"></a>
 
 			<!-- Mobile Menu Toggle Button -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
@@ -112,11 +113,11 @@
 		<!-- end of header -->
 
 
-		<div id="home" class="cards-2">
+		<div id="homeMom" class="cards-2">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<h2>工业电气解决方案的领导者</h2>
+						<h2>工业电气MOM 解决方案</h2>
 					</div>
 					<!-- end of col -->
 				</div>
@@ -124,221 +125,95 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<!-- Card -->
-						<div class="card">
+						<div class="card animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/gongye.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/byq.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 330px;">
-								<h3 class="card-title">工业电气MOM 解决方案</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">变压器</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">中压开关</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">低压断路器</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">高低压变频器</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">硅晶体太阳能</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">高压母线</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">真空断路器</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">接触器</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">低压配电柜</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">高低压母线</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">配电柜</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">高中压预制舱</div>
-									</li>
-								</ul>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">变压器</h4>
 							</div>
-							<!-- <div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="../details/ANDON.html">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card">
+						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/aps.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/zykg.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 330px;">
-								<h3 class="card-title">PCBA行业APS解决方案</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">液晶显示器</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">机械硬盘</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">路由器</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">机顶盒</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车BCM</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车空调控制</div>
-									</li>
-								</ul>
-
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">中压开关</h4>
 							</div>
-							<!-- <div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card">
+						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/qiche.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/dydlq.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 330px;">
-								<h3 class="card-title">汽车零部件解决方案</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车座椅</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">离合器壳体</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">变速箱壳体</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">变速箱凸轮轴</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车BCM</div>
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车空调控制</div>
-									</li>
-								</ul>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">低压断路器</h4>
 							</div>
-							<!-- <div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card">
+						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/fang.png" alt="alternative">
+								<img class="img-fluid" src="../images/gdybpq.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 220px;">
-								<h3 class="card-title">防窜货解决方案</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">防伪防窜货解决方案</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">溯源</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">大数据营销</div>
-									</li>
-								</ul>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">高低压变频器</h4>
 							</div>
-							<!-- <div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card">
+						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/hanjie.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/gjttyn.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 220px">
-								<h3 class="card-title">焊接(多行业)解决方案</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">汽车座椅</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">风力发电</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">高铁</div>
-									</li>
-								</ul>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">硅晶体太阳能</h4>
 							</div>
-						<!-- 	<div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
 
-						<!-- Card -->
-						<div class="card">
+						<div class="card  animate__animated animate__backInLeft">
 							<div class="card-image">
-								<img class="img-fluid" src="../images/services-3.jpg" alt="alternative">
+								<img class="img-fluid" src="../images/gymx.png" alt="alternative">
 							</div>
-							<div class="card-body" style="height: 220px">
-								<h3 class="card-title">光伏电气</h3>
-								<p>涉及产品案例:</p>
-								<ul class="list-unstyled li-space-lg">
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">太阳能光伏</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">防水隔热</div>
-									</li>
-									<li class="media">
-										<i class="fas fa-square"></i>
-										<div class="media-body">节能省电</div>
-									</li>
-								</ul>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">高低压母线</h4>
 							</div>
-							<!-- <div class="button-container">
-								<a class="btn-solid-reg page-scroll" href="#callMe">详情</a>
-							</div> -->
-							<!-- end of button-container -->
 						</div>
-						<!-- end of card -->
+
+						<div class="card  animate__animated animate__backInLeft">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/zkdlq.png" alt="alternative">
+							</div>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">真空断路器</h4>
+							</div>
+						</div>
+
+						<div class="card  animate__animated animate__backInLeft">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/jcq.png" alt="alternative">
+							</div>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">接触器</h4>
+							</div>
+						</div>
+
+						<div class="card  animate__animated animate__backInLeft">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/dypdg.png" alt="alternative">
+							</div>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">高低压配电柜</h4>
+							</div>
+						</div>
+
+						<div class="card  animate__animated animate__backInLeft">
+							<div class="card-image">
+								<img class="img-fluid" src="../images/yzc.png" alt="alternative">
+							</div>
+							<div class="card-body" style="height: 80px;">
+								<h4 class="card-title">高中压预制舱</h4>
+							</div>
+						</div>
 
 					</div>
 					<!-- end of col -->
@@ -360,12 +235,12 @@
 						<p class='white'><img src='../images/icon/email.png' class='small'> : linx@linxvalley.com
 						</p>
 						<p class='white'><img src='../images/icon/adress.png' class='small'> :
-							上海市浦东新区灵岩南路295号12号楼12-103室
+							上海市浦东新区灵岩南路295号12号楼103室
 						</p>
 					</div>
-		
+
 				</div>
-		
+
 				<div class='col-md-3'>
 					<div class='text-container'>
 						<h4>我们的使命</h4>
@@ -417,11 +292,11 @@
 		point: "121.503318,31.162774",
 		address: "上海市浦东新区灵岩南路295号12号楼12-103室"
 	}];
-	
+
 	var map; //Map实例  
 	function map_init() {
 		map = new BMap.Map("map");
-	
+
 		//第1步：设置地图中心点，上海市  
 		var point = new BMap.Point(121.503318, 31.162774);
 		var circle = new BMap.Circle(point, 20, {
@@ -457,25 +332,25 @@
 			isOpen: 1
 		});
 		map.addControl(ctrlOve);
-	
+
 		//第6步：向地图中添加比例尺控件  
 		var ctrlSca = new window.BMap.ScaleControl({
 			anchor: BMAP_ANCHOR_BOTTOM_LEFT
 		});
 		map.addControl(ctrlSca);
-	
+
 		//第7步：绘制点    
 		for (var i = 0; i < markerArr.length; i++) {
 			var p0 = markerArr[i].point.split(",")[0];
 			var p1 = markerArr[i].point.split(",")[1];
 			var maker = addMarker(new window.BMap.Point(p0, p1), i);
 			addInfoWindow(maker, markerArr[i], i);
-	
+
 		}
 	}
-	
-	
-	
+
+
+
 	// 添加标注  
 	function addMarker(point, index) {
 		var myIcon = new BMap.Icon("http://api.map.baidu.com/img/markers.png",
@@ -490,7 +365,7 @@
 		marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
 		return marker;
 	}
-	
+
 	// 添加信息窗口  
 	function addInfoWindow(marker, poi) {
 		//pop弹窗标题  
@@ -510,7 +385,7 @@
 			title: title,
 			width: 200
 		});
-	
+
 		var openInfoWinFun = function() {
 			marker.openInfoWindow(infoWindow);
 		};
